This commit alphabatizes and adds correct spacing to the CSS file

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -5,9 +5,79 @@
   --main-txt-color: #fff;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  background-color: var(--main-bg-color);
+  color: var(--main-txt-color);
+  font-family: "Oxygen", sans-serif;
+  font-size: 1.3rem;
+  text-align: center;
+  margin: 0;
+}
+
+button {
+  background-color: var(--main-border-color);
+}
+
+h3 {
+  grid-row: 1;
+  grid-column: 0;
+}
+
+i {
+  background-color: var(--header-bg-color);
+  color: var(--main-border-color);
+}
+
+p text {
+  margin: 5%;
+}
+
+section:first-of-type {
+  align-content: center;
+  place-items: center;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: 0.2fr 2fr 0.1fr 0.1fr 0.1fr 0.1fr;
+  grid-gap: 20px;
+}
+
+.amount-spent {
+  color: brown;
+}
+
+.container {
+  align-content: center;
+  place-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 0.2fr 2fr 0.1fr 0.1fr 0.1fr 0.1fr;
+  grid-gap: 20px;
+  overflow-x: auto;
+  overflow-y: hidden;
+  max-width: 100vw;
+  padding: 16px;
+  border: 2px solid var(--main-border-color);
+  margin: 3%;
+}
+
+.destination-image {
+  grid-row: 2;
+  width: 250px;
+  height: 200px;
+}
+
 .footer {
   margin-top: 5em;
   text-align: center;
+}
+
+.future-trips {
+  color: pink;
 }
 
 .header-section {
@@ -43,6 +113,14 @@
   margin-top: 10px;
 }
 
+.past-trips {
+  grid-column: 2;
+}
+
+.present-trips {
+  color: green;
+}
+
 .signin {
   left: 38%;
   position: absolute;
@@ -56,38 +134,6 @@
   margin-top: 20px;
   outline: none;
   text-align: center;
-}
-
-.username {
-  margin-top: -20px;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  width: 100%;
-  background-color: var(--main-bg-color);
-  color: var(--main-txt-color);
-  font-family: "Oxygen", sans-serif;
-  font-size: 1.3rem;
-  text-align: center;
-  margin: 0;
-}
-
-button {
-  background-color: var(--main-border-color);
-}
-
-i {
-  background-color: var(--header-bg-color);
-  color: var(--main-border-color);
-}
-
-h3 {
-  grid-row: 1;
-  grid-column: 0;
 }
 
 .trip-date {
@@ -106,12 +152,6 @@ h3 {
   grid-row: 6;
 }
 
-.destination-image {
-  grid-row: 2;
-  width: 250px;
-  height: 200px;
-}
-
 .total-spent {
   display: flex;
   margin: auto;
@@ -119,64 +159,12 @@ h3 {
   grid-row: 0;
 }
 
-.container {
-  align-content: center;
-  place-items: center;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 0.2fr 2fr 0.1fr 0.1fr 0.1fr 0.1fr;
-  grid-gap: 20px;
-  overflow-x: auto;
-  overflow-y: hidden;
-  max-width: 100vw;
-  padding: 16px;
-  border: 2px solid var(--main-border-color);
-  margin: 3%;
-}
-
-p text {
-  margin: 5%;
-}
-
-.left-button {
-  z-index: 1;
-  margin-bottom: -150%;
-  margin-left: -250%;
-  padding-top: 1%;
-  padding-bottom: 1%;
-  background-color: black;
-}
-
-.right-button {
-  margin-right: auto;
-}
-
 .travname {
   color: var(--main-border-color);
 }
 
-.past-trips {
-  grid-column: 2;
-}
-.present-trips {
-  color: green;
-}
-
-.future-trips {
-  color: pink;
-}
-
-.amount-spent {
-  color: brown;
-}
-
-section:first-of-type {
-  align-content: center;
-  place-items: center;
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: 0.2fr 2fr 0.1fr 0.1fr 0.1fr 0.1fr;
-  grid-gap: 20px;
+.username {
+  margin-top: -20px;
 }
 
 @media (min-width: 376px max-width 768px) {
